# mrftools

./: .gitignore  ArbitraryFA.txt  ArbitraryFA_bis.txt  ArbitraryPHI.txt  ArbitraryTE.txt  README.md  dictmodel.py  environment.yml  install_mrftools.bat  install_mrftools.sh  io_twixt.py  main_functions_2D.py  pull_example_data.py  setup.cfg  trajectory.py  utils_mrf.py  utils_simu.py
config/: config_build_maps.json  config_dicoB0.json  config_dicoB1.json  config_dicoT1.json  config_dicoT2.json  config_dico_unique.json
dico/: mrf_dictconf_Dico2_Invivo.json  mrf_sequence_adjusted.json
mrftools/: config.py  dictmodel.py  image_series.py  main_functions_2D.py  trajectory.py  utils_mrf.py  utils_mrf_bak.py  utils_reco.py  utils_simu.py
mrftools/io/: __init__.py  config.py  io_csa.py  io_nibabel.py  io_rda.py  io_twixt.py  metaimage.py  orientation.py  parse_CSA.py  roilabels.py  volume.py
resources/dico/: mrf_dictconf_Dico2_Invivo_light_for_matching.json
scripts/: cli.py  numerical_phantom.py  pull_example_data.py  script_generic_MRF_sequence_sensitivity.py  script_reco_test.py  test_sequence_epgpy.py
