[metadata]
name = mrftools
description = MRF tools ...
version = 0.1.dev1

[options]
python_requires = >=3.7
install_requires = \
    numpy
    dask
    scipy
    scikit-learn
    pillow
    simpleitk
    finufft
    tqdm
    matplotlib
    requests
    pywavelets
    scikit-image
    twixtools @ git+https://github.com/pehses/twixtools.git
    epgpy @ git+https://github.com/py-baudin/epgpy.git
packages = mrftools

[options.extras_require]
cupy = cupy
# test = pytest